kubernetes/pterodactyl/panel/node/endpoint.yml
apiVersion: v1
kind: Endpoints
metadata:
  name: gameserver-node-01
subsets:
  - addresses:
      - ip: 172.24.20.10 # ip of your game server running wings
    ports:
      - port: 443
